@@ -7,6 +7,7 @@ BETA ======= 1.9.1 (HOTFIX)
 - added: U.parseBoolean(val, [def])
 - added: F.backup(filename, path, [callback], [filter]) --> backup some path to one file
 - added: F.restore(filename, target, [callback], [filter]) --> restore backup file (but not evaluating)
+- added: MailMessage supports custom headers `message.headers = { key: 'value' }`
 
 - updated: MailMessage.bcc(email, [clear]) --> added clear
 - updated: MailMessage.cc(email, [clear]) --> added clear
